<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.EditProfileFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/editProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="64dp"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_edit_profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                app:civ_border_color="#666666"
                app:civ_border_width="0.7dp" />

            <TextView
                android:id="@+id/tv_change_profile_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageview_edit_profile_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="Change profile photo"
                android:textColor="@color/md_theme_light_primary"
                android:textSize="16sp" />


            <!-- User infomation -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_change_profile_photo"
                android:layout_marginTop="16dp"
                android:hint="Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_name"
                android:layout_marginTop="16dp"
                android:hint="Bio">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Socail Links -->
            <TextView
                android:id="@+id/lable_profile_social_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_profile_bio"
                android:layout_marginTop="32dp"
                android:text="Social Links"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_Website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lable_profile_social_links"
                android:layout_marginTop="16dp"
                android:hint="Website">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_Website"
                android:layout_marginTop="16dp"
                android:hint="Facebook">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_facebook"
                android:layout_marginTop="16dp"
                android:hint="Twitter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_Instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_twitter"
                android:layout_marginTop="16dp"
                android:hint="Instagram">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profile_Linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_Instagram"
                android:layout_marginTop="16dp"
                android:hint="Linked in">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_edit_profile_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_profile_Linkedin"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="Save Changes" />

        </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>