<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_profile_container"
    tools:context=".Profile.UserProfileActivity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">


       </FrameLayout>
   </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>